
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59" # error handling
async-trait = "0.1.80"
bytes = "1.3.0" # helps manage buffers
clap = { version = "4.5.4", features = [
  "derive",
  "env",
] } # command line parsing
dotenv = "0.15.0" # environment variables
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.201", features = ["derive"] } # serialization
thiserror = "1.0.32" # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tracing = "0.1.40" # logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } # logging
